fix: aligned center text in shop page + fix city name

--- a/shop.css
+++ b/shop.css
@@ -25,7 +25,7 @@ html, body {
     background-color: #faedcd;
     padding: 1em;
     border-radius: 2em;
-    text-align: left;
+    text-align: center;
     padding-left: 1em;
     font-size: 1.5em;
     font-family: "VT323", monospace;
